# oai-gradio-langchain

./: .gitignore  Pipfile  README.md  graph_manager.py  hello.py  init_system_prompt.py  langchain-chatopenai.py  langchain-hugginface.py  langchain_oai_mcp.py  langchain_oai_mcp_manual.py  listing_middleware.py  math_server.py  mcp_custom_list_tools.py  mcp_server.py  oai-streamlit.py  oai-thread.py  oai.py  pyproject.toml  server.py  socketio.html  streamm.py
.augment/rules/: package_management.md
.idx/: dev.nix
bruno-py/: api-completion.bru  api-messages.bru  api-writer.bru  bruno.json  chat.bru  hello.bru
evals/: mlflow_from_gemini.py  qa_data.json  ragas_eval.py
fakellm/: tool-calling.py
promptfoo_custom/: custom.py  promptfooconfig.yml  readme.md
