[project]
name = "your-project-name" # Replace with your project name
version = "0.1.0"
description = "Your project description"
authors = [{ name="Your Name", email="your@email.com" }]
dependencies = [
    "langchain-openai",
    "pydantic",
    "fastapi",
    "python-dotenv",
    "uvicorn"
]

[project.optional-dependencies]
dev = [
    "watchdog",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"